--- a/index.html
+++ b/index.html
@@ -1,19 +1,219 @@
+<!--PROPERTY OF POOP DEVOURER!-->
 <!DOCTYPE html>
 <html style="background-color: black;">
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
   <head>
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
     <title>Turn back.</title>
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
     <meta content="ACCESS DENIED" property="og:title" />
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
     <meta content="I DON'T LIKE SOME PEOPLE OF COLOR ." property="og:description" />
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
     <meta content="./Columbine_army_of_two.png" property="og:image" />
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
   </head>
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
   <body>
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
     <iframe width="560" height="315" src="https://www.youtube.com/embed/um_hdv7ZXRE?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/iNpXCzaWW1s?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ycs92N_rph8?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/um_hdv7ZXRE?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/iNpXCzaWW1s?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ycs92N_rph8?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
     <table style="border-radius: .5em;background-color: #4d0000;border:1px solid black;" cellpadding="5" cellspacing="5" width="100%">
     <tbody><tr>
     <td style="border-radius: .5em;background-color: black;" width="150">
@@ -24,6 +224,7 @@
     <td style="font-family:Gill Sans MT; color: #9b0707; text-align: center; font-size: 3em; line-height:1">STOP RIGHT THERE CRIMINAL <span style="color: #FF0000;">SCUM</span>!
     </td></tr></tbody></table>
     <iframe src="https://www.yyyyyyy.info" width="1024" height="768"></iframe>
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<table style="border-radius: .5em;background-color: #4d0000;border:1px solid black;" cellpadding="5" cellspacing="5" width="100%">
     <tbody><tr>
     <td style="border-radius: .5em;background-color: black;" width="150">
@@ -34,6 +235,7 @@
     <td style="font-family:Gill Sans MT; color: #9b0707; text-align: center; font-size: 3em; line-height:1">YOU WILL <span style="color: #FF0000;">DIE</span> PAST THAT POINT!
     </td></tr></tbody></table>
     <iframe src="https://www.yyyyyyy.space/" width="1024" height="768"></iframe>
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<table style="border-radius: .5em;background-color: #4d0000;border:1px solid black;" cellpadding="5" cellspacing="5" width="100%">
     <tbody><tr>
     <td style="border-radius: .5em;background-color: black;" width="150">
@@ -44,5 +246,6 @@
     <td style="font-family:Gill Sans MT; color: #9b0707; text-align: center; font-size: 3em; line-height:1">I WARNED <span style="color: #FF0000;">YOU</span>!
     </td></tr></tbody></table>
     <iframe src="https://www.yyyyyyy.link/" width="1024" height="768"></iframe>
+	<!--DO NOT VIEW OR YOU WILL DIE!-->
   </body>
 </html>
