--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
-    <meta content="./Columbine_army_of_two.png" property="og:image" />
+    <meta content="https://poopdevourer.github.io/c0a40307f3c93d0e.jpg" property="og:image" />
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
@@ -223,28 +223,13 @@
     </td>
     <td style="font-family:Gill Sans MT; color: #9b0707; text-align: center; font-size: 3em; line-height:1">STOP RIGHT THERE CRIMINAL <span style="color: #FF0000;">SCUM</span>!
     </td></tr></tbody></table>
+	<img alt="Hitman.gif" src="./Hitman.gif" decoding="async" width="150" height="200"></img>
     <iframe src="https://www.yyyyyyy.info" width="1024" height="768"></iframe>
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
-	<table style="border-radius: .5em;background-color: #4d0000;border:1px solid black;" cellpadding="5" cellspacing="5" width="100%">
-    <tbody><tr>
-    <td style="border-radius: .5em;background-color: black;" width="150">
-      <a href="https://www.yyyyyyy.space" class="image">
-        <img alt="Columbine army of two.png" src="./Columbine_army_of_two.png" decoding="async" width="150" height="200"></img>
-      </a>
-    </td>
-    <td style="font-family:Gill Sans MT; color: #9b0707; text-align: center; font-size: 3em; line-height:1">YOU WILL <span style="color: #FF0000;">DIE</span> PAST THAT POINT!
-    </td></tr></tbody></table>
+	<img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img>
     <iframe src="https://www.yyyyyyy.space/" width="1024" height="768"></iframe>
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
-	<table style="border-radius: .5em;background-color: #4d0000;border:1px solid black;" cellpadding="5" cellspacing="5" width="100%">
-    <tbody><tr>
-    <td style="border-radius: .5em;background-color: black;" width="150">
-      <a href="https://www.yyyyyyy.link" class="image">
-        <img alt="Columbine army of two.png" src="./Columbine_army_of_two.png" decoding="async" width="150" height="200"></img>
-      </a>
-    </td>
-    <td style="font-family:Gill Sans MT; color: #9b0707; text-align: center; font-size: 3em; line-height:1">I WARNED <span style="color: #FF0000;">YOU</span>!
-    </td></tr></tbody></table>
+	<img alt="Columbinedoom.jpg" src="./Columbinedoom.jpg" decoding="async" width="150" height="200"></img>
     <iframe src="https://www.yyyyyyy.link/" width="1024" height="768"></iframe>
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
   </body>
