TRIGGER BUILD ALREADY

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--PROPERTY OF POOP DEVOURER!-->
-<!DOCTYPE html>
+<!DOCTYPE html> <!--POOP!-->
 <html style="background-color: black;">
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
