--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 	<img alt="Hitman.gif" src="./Hitman.gif" decoding="async" width="150" height="200"></img>
     <iframe src="https://www.yyyyyyy.info" width="1024" height="768"></iframe>
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
-	<img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img>
+	<img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> 
     <iframe src="https://www.yyyyyyy.space/" width="1024" height="768"></iframe>
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<img alt="Columbinedoom.jpg" src="./Columbinedoom.jpg" decoding="async" width="150" height="200"></img>
