--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
+	<script src="link.js"></script>
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
@@ -205,31 +206,7 @@
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
-  <body>
-	<!--DO NOT VIEW OR YOU WILL DIE!-->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/um_hdv7ZXRE?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/iNpXCzaWW1s?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ycs92N_rph8?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/um_hdv7ZXRE?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/iNpXCzaWW1s?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ycs92N_rph8?autoplay=1&loop=1" title="black" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-	<!--DO NOT VIEW OR YOU WILL DIE!-->
-    <table style="border-radius: .5em;background-color: #4d0000;border:1px solid black;" cellpadding="5" cellspacing="5" width="100%">
-    <tbody><tr>
-    <td style="border-radius: .5em;background-color: black;" width="150">
-      <a href="https://www.yyyyyyy.info" class="image">
-        <img alt="Columbine army of two.png" src="./Columbine_army_of_two.png" decoding="async" width="150" height="200"></img>
-      </a>
-    </td>
-    <td style="font-family:Gill Sans MT; color: #9b0707; text-align: center; font-size: 3em; line-height:1">STOP RIGHT THERE CRIMINAL <span style="color: #FF0000;">SCUM</span>!
-    </td></tr></tbody></table>
-    <iframe src="https://www.yyyyyyy.info" width="1024" height="768"></iframe>
-	<!--DO NOT VIEW OR YOU WILL DIE!-->
-	<img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> <img alt="c0a40307f3c93d0e.jpg" src="./c0a40307f3c93d0e.jpg" decoding="async" width="150" height="200"></img> 
-    <iframe src="https://www.yyyyyyy.space/" width="1024" height="768"></iframe>
-	<!--DO NOT VIEW OR YOU WILL DIE!-->
-	<img alt="Columbinedoom.jpg" src="./Columbinedoom.jpg" decoding="async" width="150" height="200"></img>
-    <iframe src="https://www.yyyyyyy.link/" width="1024" height="768"></iframe>
+  <body id="container">
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
   </body>
 </html>
