--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
-	<script src="link.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.1/howler.core.min.js"></script>
+	<script src="link.js" defer></script>
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
 	<!--DO NOT VIEW OR YOU WILL DIE!-->
